# PowerEngine

./: CMakeLists.txt  CMakePresets.json  EngineCore.h  PowerEngine.cpp  PowerEngine.h  README.md  main.cpp  vcpkg.json
shaders/: cloth.frag  cloth.slang  cloth.vert  integrate.comp  math_spring.comp  model.frag  model.slang  model.vert  particle.slang  shader.slang  slang.spv
src/: camera.cpp  camera.h  camera.hpp  compute_pass.cpp  compute_pass.h  context.cpp  context.h  context.hpp  frameInFlight.hpp  graphics_pass.cpp  graphics_pass.h  library_impl.cpp  main.cpp  model.cpp  model.h  model.hpp  mouse_interactor.cpp  mouse_interactor.h  particle.h  particle.hpp  pch.h  perFrame.hpp  perImage.hpp  preamble.h  preamble.hpp  project_types.h  ray.cpp  ray.h  render_pass.h  swapchain.cpp  swapchain.h  swapchain.hpp  swapchainImageResources.cpp  swapchainImageResources.hpp  texture_2d.cpp  texture_2d.h  uboManager.cpp  uboManager.hpp  ubos.h  ubos.hpp  (+6 more)
